<resources>
    <string name="app_name">EzPark</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="error">Error</string>
    <string name="error_message1">Wrong Email or Password! Please Try Again.</string>
    <string name="error_message2">Please enter your email and password.</string>
    <string name="error_message3">Password does not match, please try again.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="edit_account">Edit Account</string>
    <string name="email_address">example@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc">Delete</string>
    <string-array name="LocationArray">
        <item>LocationA</item>
        <item>LocationB</item>
        <item>LocationC</item>
    </string-array>

    <string name="features">Features</string>
    <string name="features_desc">This application is to use to blah blah blah</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">
        This application is created by:
        \nLo Wei Hong
        \nNg En Hao
        \nOng Jia Ying
    </string>

    <string-array name="app_theme">
        <item>Default</item>
        <item>Light Theme</item>
    </string-array>
</resources>
